c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/declaration_as_statement.c
int main(void) {
    if (5)
        int i = 0;
}